<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="svecw.walletlog.Home">
        <item
            android:id="@+id/action_Settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            app:showAsAction="never"
        />
       <item
        android:id="@+id/action_Category"
        android:orderInCategory="100"
        android:title="@string/categoryChart"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_Graph"
        android:orderInCategory="100"
        android:title="@string/graph"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_About"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"
        />
</menu>

